fix: show footer on mobile version if has space

--- a/features/layout/page-container/page-container.module.scss
+++ b/features/layout/page-container/page-container.module.scss
@@ -23,7 +23,9 @@
 }
 
 .contentContainer {
-  min-height: calc(100vh - 2 * space.$s8 - misc.$header-height);
+  min-height: calc(
+    100vh - 2 * space.$s8 - misc.$header-height - misc.$footer-mobile-height
+  );
   margin-top: misc.$header-height;
   padding: space.$s8 space.$s3;
   background: white;
