--- a/styles/misc.scss
+++ b/styles/misc.scss
@@ -1,2 +1,3 @@
 $header-height: 4rem;
 $footer-desktop-height: 3.75rem;
+$footer-mobile-height: 11.063rem;
